[package]
name = "ssh_agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssh2 = { version = "0.9.4" }
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_with = { version = "3.4.0" } 
sqlite = "0.32.0"
